--- a/style/style.css
+++ b/style/style.css
@@ -125,11 +125,13 @@ footer .fa-ul .footer_list_no-puce {
 }
 .presentation a {
   background: linear-gradient(#FF79DA, #9356DC);
+  font-size: 4vw;
   color: white;
   text-decoration: none;
   display: inline-block;
   border-radius: 50px;
   margin: auto;
+  font-weight: 500;
   box-shadow: 1px 1px 14px 4px rgba(0, 0, 0, 0.1);
   margin: 30px auto;
   padding: 14px 0px;
@@ -160,7 +162,7 @@ footer .fa-ul .footer_list_no-puce {
   background-color: #f6f6f6;
   margin: 0px 0px 26px 10px;
   height: 65px;
-  width: 100%;
+  width: 96%;
   border-radius: 20px;
   align-items: center;
   position: relative;
@@ -254,7 +256,7 @@ footer .fa-ul .footer_list_no-puce {
 .menu_carte {
   position: relative;
   z-index: 2;
-  margin-top: -70px;
+  margin-top: -60px;
   box-sizing: border-box;
   padding: 30px 12px 57px 12px;
   width: 100%;
@@ -264,7 +266,7 @@ footer .fa-ul .footer_list_no-puce {
 }
 .menu_carte-top-align {
   align-items: center;
-  padding: 0px 8px 0px 8px;
+  padding: 0px 20px 0px 8px;
   font-family: "Shrikhand";
   display: flex;
   justify-content: space-between;
@@ -323,19 +325,22 @@ footer .fa-ul .footer_list_no-puce {
 }
 .menu .menu_button {
   background: linear-gradient(#FF79DA, #9356DC);
+  font-size: 4vw;
   color: white;
   text-decoration: none;
   display: inline-block;
   border-radius: 50px;
   margin: auto;
+  font-weight: 500;
   box-shadow: 1px 1px 14px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 18px 40px;
+  padding: 14px 40px;
   margin: 35px auto 15px auto;
   outline: none;
   border: none;
+  font-weight: 500;
 }
 
 input[type=checkbox] {
